Add most of the tests