@@ -1,12 +1,13 @@
 package com.coffee.coffeestoreapi.service;
 
-import com.coffee.coffeestoreapi.model.Drink;
+import com.coffee.coffeestoreapi.config.settings.DiscountSettings;
 import com.coffee.coffeestoreapi.model.Discount;
+import com.coffee.coffeestoreapi.model.Drink;
 import com.coffee.coffeestoreapi.model.OrderLine;
 import com.coffee.coffeestoreapi.model.OrderRequest;
+import com.coffee.coffeestoreapi.model.Topping;
 import org.junit.jupiter.params.provider.Arguments;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
@@ -14,147 +15,197 @@ import java.util.stream.Stream;
 import static com.coffee.coffeestoreapi.model.Currency.EUR;
 
 public class BaseTest {
-    // Test data generators
-    protected static Stream<Arguments> provideOrderLinesForSubtotal() {
+
+    // Test data for drinks
+    protected static final Drink ESPRESSO = createDrink("Espresso", 250.0);
+    protected static final Drink LATTE = createDrink("Latte", 350.0);
+    protected static final Drink CAPPUCCINO = createDrink("Cappuccino", 300.0);
+    protected static final Drink AMERICANO = createDrink("Americano", 280.0);
+
+    // Test data for toppings
+    protected static final Topping MILK = createTopping("Milk", 50.0);
+    protected static final Topping SUGAR = createTopping("Sugar", 20.0);
+    protected static final Topping CINNAMON = createTopping("Cinnamon", 30.0);
+
+    // Method sources for parameterized tests
+
+    // Test data for calculateSubtotalInCents method
+    public static Stream<Arguments> subtotalTestCases() {
         return Stream.of(
-                // Empty list
-                Arguments.of(Collections.emptyList(), 0.0),
+            // Empty order lines
+            Arguments.of(Collections.emptyList(), 0.0),
 
-                // Single order line
-                Arguments.of(List.of(
-                        new OrderLine(500.0, new Drink(), List.of())
-                ), 500.0),
+            // Single order line
+            Arguments.of(List.of(
+                new OrderLine(250.0, ESPRESSO, Collections.emptyList())
+            ), 250.0),
 
-                // Multiple order lines
-                Arguments.of(List.of(
-                        new OrderLine(500.0, new Drink(), List.of()),
-                        new OrderLine(300.0, new Drink(), List.of()),
-                        new OrderLine(200.0, new Drink(), List.of())
-                ), 1000.0)
+            // Multiple order lines
+            Arguments.of(List.of(
+                new OrderLine(250.0, ESPRESSO, Collections.emptyList()),
+                new OrderLine(350.0, LATTE, Collections.emptyList())
+            ), 600.0),
+
+            // Order lines with toppings
+            Arguments.of(List.of(
+                new OrderLine(300.0, ESPRESSO, List.of(MILK, SUGAR)),
+                new OrderLine(400.0, LATTE, List.of(CINNAMON))
+            ), 700.0)
         );
     }
 
-    protected static Stream<Arguments> provideDiscountsForTotalDiscount() {
+    // Test data for calculateTotalDiscount method
+    public static Stream<Arguments> discountTestCases() {
         return Stream.of(
-                // Empty list
-                Arguments.of(Collections.emptyList(), 1000.0, 0.0),
+            // No discounts
+            Arguments.of(Collections.emptyList(), 1000.0, 0.0),
 
-                // Percentage discount
-                Arguments.of(List.of(createPercentageDiscount(25.0)), 1000.0, 250.0),
+            // Percentage discount
+            Arguments.of(List.of(createPercentageDiscount("25% off", 25.0)), 1000.0, 250.0),
 
-                // Fixed amount discount
-                Arguments.of(List.of(createFixedDiscount(300.0)), 1000.0, 300.0),
+            // Fixed amount discount
+            Arguments.of(List.of(createAmountDiscount("$5 off", 500.0)), 1000.0, 500.0),
 
-                // Multiple discounts (should take the highest)
-                Arguments.of(List.of(
-                        createPercentageDiscount(10.0),
-                        createFixedDiscount(150.0)
-                ), 1000.0, 150.0)
+            // Multiple discounts (should take the highest)
+            Arguments.of(List.of(
+                createPercentageDiscount("10% off", 10.0),
+                createAmountDiscount("$2 off", 200.0)
+            ), 1000.0, 200.0),
+
+            Arguments.of(List.of(
+                createPercentageDiscount("30% off", 30.0),
+                createAmountDiscount("$2 off", 200.0)
+            ), 1000.0, 300.0)
         );
     }
 
-    protected static Stream<Arguments> provideOrderLinesForDiscounts() {
+    // Test data for calculateDiscounts method
+    public static Stream<Arguments> discountCalculationTestCases() {
         return Stream.of(
-                // Empty list
-                Arguments.of(Collections.emptyList(), 0.0, Collections.emptyList()),
+            // Empty order lines
+            Arguments.of(Collections.emptyList(), 0.0, Collections.emptyList()),
 
-                // Order under €12, no discount
-                Arguments.of(createCoffeeOrderLines(2), 1000.0, Collections.emptyList()),
+            // Order under 12 euros, less than 3 drinks
+            Arguments.of(
+                List.of(new OrderLine(500.0, ESPRESSO, Collections.emptyList())),
+                500.0,
+                Collections.emptyList()
+            ),
 
-                // Order over €12, 25% discount
-                Arguments.of(createCoffeeOrderLines(2), 1300.0, List.of(createPercentageDiscount(25.0))),
-
-                // 3+ coffees, free item discount
-                Arguments.of(createCoffeeOrderLines(3), 1000.0, List.of(createFixedDiscount(200.0))),
-
-                // Both discounts eligible, should return the better one
-                Arguments.of(createCoffeeOrderLines(3), 1300.0, List.of(createPercentageDiscount(25.0)))
-        );
-    }
-
-    protected static Stream<Arguments> provideOrderRequestsForProcessing() {
-        return Stream.of(
-                // Basic order with no discounts
-                Arguments.of(
-                        createOrderRequestWithFixedSubtotal(List.of(
-                                new OrderLine(500.0, createDrink("Drink 1", 500.0), List.of()),
-                                new OrderLine(500.0, createDrink("Drink 2", 500.0), List.of())
-                        )),
-                        false,
-                        1000.0,
-                        1000.0
+            // Order over 12 euros (25% discount applies)
+            Arguments.of(
+                List.of(
+                    new OrderLine(700.0, LATTE, Collections.emptyList()),
+                    new OrderLine(600.0, CAPPUCCINO, Collections.emptyList())
                 ),
+                1300.0,
+                List.of(createPercentageDiscount("25% off for orders over €12", 25.0))
+            ),
 
-                // Order with 25% discount enabled
-                Arguments.of(
-                        createOrderRequestWithFixedSubtotal(List.of(
-                                new OrderLine(650.0, createDrink("Drink 1", 650.0), List.of()),
-                                new OrderLine(650.0, createDrink("Drink 2", 650.0), List.of())
-                        )),
-                        true,
-                        1300.0,
-                        975.0
+            // Order with 3+ drinks (free cheapest drink applies)
+            Arguments.of(
+                List.of(
+                    new OrderLine(300.0, ESPRESSO, Collections.emptyList()),
+                    new OrderLine(350.0, LATTE, Collections.emptyList()),
+                    new OrderLine(280.0, AMERICANO, Collections.emptyList())
                 ),
+                930.0,
+                List.of(createAmountDiscount("Free drink for 3+ drink in cart", 280.0))
+            ),
 
-                // Order with free item discount enabled
-                Arguments.of(
-                        createOrderRequestWithFixedSubtotal(List.of(
-                                new OrderLine(400.0, createDrink("Drink 1", 400.0), List.of()),
-                                new OrderLine(300.0, createDrink("Drink 2", 300.0), List.of()),
-                                new OrderLine(300.0, createDrink("Drink 3", 300.0), List.of())
-                        )),
-                        true,
-                        1000.0,
-                        700.0  // Adjusted to match actual behavior
+            // Order eligible for both discounts (returns both discounts)
+            Arguments.of(
+                List.of(
+                    new OrderLine(500.0, ESPRESSO, Collections.emptyList()),
+                    new OrderLine(500.0, LATTE, Collections.emptyList()),
+                    new OrderLine(300.0, AMERICANO, Collections.emptyList())
+                ),
+                1300.0,
+                List.of(
+                    createPercentageDiscount("25% off for orders over €12", 25.0),
+                    createAmountDiscount("Free drink for 3+ drink in cart", 300.0)
                 )
+            )
         );
     }
 
-    // Helper methods for creating test data
-    protected static Discount createPercentageDiscount(Double percentage) {
-        Discount discount = new Discount();
-        discount.setName("Percentage discount");
-        discount.setPercentage(percentage);
-        return discount;
-    }
+    // Test data for processOrder method
+    public static Stream<Arguments> orderProcessingTestCases() {
+        return Stream.of(
+            // Basic order with no discounts
+            Arguments.of(
+                createOrderRequest("John Doe", List.of(
+                    new OrderLine(300.0, ESPRESSO, Collections.emptyList())
+                )),
+                false, false, false,
+                300.0, 300.0, 0
+            ),
 
-    protected static Discount createFixedDiscount(Double amount) {
-        Discount discount = new Discount();
-        discount.setName("Fixed discount");
-        discount.setAmountInCents(amount);
-        return discount;
-    }
+            // Order with 25% discount enabled
+            Arguments.of(
+                createOrderRequest("Jane Smith", List.of(
+                    new OrderLine(700.0, LATTE, Collections.emptyList()),
+                    new OrderLine(600.0, CAPPUCCINO, Collections.emptyList())
+                )),
+                true, true, false,
+                1300.0, 975.0, 1
+            ),
 
-    protected static List<OrderLine> createCoffeeOrderLines(int count) {
-        List<OrderLine> orderLines = new ArrayList<>();
-        for (int i = 0; i < count; i++) {
-            Drink drink = new Drink();
-            drink.setName("Drink " + (i + 1));
-            drink.setPriceInCents((i + 2) * 100.0); // Different prices: 200, 300, 400...
+            // Order with free item discount enabled
+            Arguments.of(
+                createOrderRequest("Bob Johnson", List.of(
+                    new OrderLine(300.0, ESPRESSO, Collections.emptyList()),
+                    new OrderLine(350.0, LATTE, Collections.emptyList()),
+                    new OrderLine(280.0, AMERICANO, Collections.emptyList())
+                )),
+                true, false, true,
+                930.0, 650.0, 1
+            ),
 
-            orderLines.add(new OrderLine(
-                    drink.getPriceInCents(),
-                    drink,
-                    List.of()
-            ));
-        }
-        return orderLines;
-    }
-
-    protected static OrderRequest createOrderRequestWithFixedSubtotal(List<OrderLine> orderLines) {
-        double subtotal = orderLines.stream().mapToDouble(OrderLine::priceInCents).sum();
-        return new OrderRequest(
-                (int) subtotal,
-                "Tamas",
-                EUR,
-                orderLines
+            // Order eligible for both discounts (returns both discounts)
+            Arguments.of(
+                createOrderRequest("Alice Brown", List.of(
+                    new OrderLine(500.0, ESPRESSO, Collections.emptyList()),
+                    new OrderLine(500.0, LATTE, Collections.emptyList()),
+                    new OrderLine(300.0, AMERICANO, Collections.emptyList())
+                )),
+                true, true, true,
+                1300.0, 975.0, 2
+            )
         );
     }
 
-    protected static Drink createDrink(String name, double priceInCents) {
+    // Helper methods to create test objects
+    private static Drink createDrink(String name, Double priceInCents) {
         Drink drink = new Drink();
         drink.setName(name);
         drink.setPriceInCents(priceInCents);
         return drink;
+    }
+
+    private static Topping createTopping(String name, Double priceInCents) {
+        Topping topping = new Topping();
+        topping.setName(name);
+        topping.setPriceInCents(priceInCents);
+        return topping;
+    }
+
+    protected static Discount createPercentageDiscount(String name, Double percentage) {
+        Discount discount = new Discount();
+        discount.setName(name);
+        discount.setPercentage(percentage);
+        return discount;
+    }
+
+    protected static Discount createAmountDiscount(String name, Double amountInCents) {
+        Discount discount = new Discount();
+        discount.setName(name);
+        discount.setAmountInCents(amountInCents);
+        return discount;
+    }
+
+    protected static OrderRequest createOrderRequest(String orderer, List<OrderLine> orderLines) {
+        double totalPrice = orderLines.stream().mapToDouble(OrderLine::priceInCents).sum();
+        return new OrderRequest((int) totalPrice, orderer, EUR, orderLines);
     }
 }
